# dhiman/mini-project/bookkeeping_service/controllers/medicines.go
@@ -5,13 +5,54 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/go-playground/validator"
 	log "github.com/sirupsen/logrus"
 
 	"github.com/dhi13man/healthcare-app/bookkeeping_service/models"
+	"github.com/dhi13man/healthcare-app/bookkeeping_service/models/dtos"
 	"github.com/dhi13man/healthcare-app/bookkeeping_service/repositories"
-	"github.com/dhi13man/healthcare-app/users_service/models/dtos"
 	"github.com/gin-gonic/gin"
 )
+
+var validate = validator.New()
+
+// @Summary      Create a Medicine
+// @Description  Create a Medicine in the Database using the data sent by them (REGISTER)
+// @Tags         accounts
+// @Accept       json
+// @Produce      json
+// @Param        email     body      string  true  "User Email"
+// @Param        name      body      string  true  "User Name"
+// @Param        password  body      string  true  "User Password"
+// @Success      200       {object}  interface{}
+// @Failure      400       {object}  dtos.HTTPError
+// @Failure      404       {object}  dtos.HTTPError
+// @Failure      500       {object}  dtos.HTTPError
+// @Router       /users/medicines [post]
+func CreateMedicine(c *gin.Context) {
+	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
+	defer cancel()
+
+	var requestBody models.Medicine
+	err := c.BindJSON(&requestBody)
+	if err != nil {
+		log.Error("Binding Request Body Failed: ", err)
+		c.JSON(http.StatusBadRequest, dtos.NewError(http.StatusBadRequest, err))
+	} else if validationErr := validate.Struct(&requestBody); validationErr != nil { // Validation of required fields
+		log.Error("Validating Request Body Failed: ", validationErr)
+		c.JSON(http.StatusBadRequest, dtos.NewError(http.StatusBadRequest, validationErr))
+	} else {
+		newUser := models.NewMedicine(requestBody.Name, requestBody.Diseases)
+		out, err := repositories.CreateMedicine(*newUser, ctx)
+		if err != nil {
+			const errMsg string = "Error inserting user."
+			log.Error(errMsg, err)
+			c.JSON(http.StatusInternalServerError, dtos.NewError(http.StatusInternalServerError, err, errMsg))
+		} else {
+			c.JSON(http.StatusCreated, out)
+		}
+	}
+}
 
 // @Summary      Return all Medicines in database from repository.
 // @Description  Fetches all Medicines in database from repository and return an unfiltered JSON array of them.
@@ -110,4 +151,77 @@ func FindMedicineByName(c *gin.Context) {
 		}
 	}
 	c.JSON(http.StatusOK, medicines)
+ }
+
+ // @Summary      Updates Medicines in the Database.
+ // @Description  Updates the Medicine in the Database using their email.
+ // @Tags         accounts
+ // @Accept       json
+ // @Produce      json
+ // @Param        email     body      string  true  "User Email"
+ // @Param        name      body      string  true  "User Name"
+ // @Param        password  body      string  true  "User Password"
+ // @Success      200       {object}  models.Medicine
+ // @Failure      400       {object}  dtos.HTTPError
+ // @Failure      404       {object}  dtos.HTTPError
+ // @Failure      500       {object}  dtos.HTTPError
+ // @Router       /users/medicines/{name} [put]
+ func UpdateMedicines(c *gin.Context) {
+	 ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
+	 defer cancel()
+ 
+	 var requestBody models.Medicine
+	 err := c.BindJSON(&requestBody)
+	 if err != nil {
+		 log.Error("Binding Request Body Failed: ", err)
+		 c.JSON(http.StatusBadRequest, dtos.NewError(http.StatusBadRequest, err))
+	 } else if validationErr := validate.Struct(&requestBody); validationErr != nil { // Validation of required fields
+		 log.Error("Validating Request Body Failed: ", validationErr)
+		 c.JSON(http.StatusBadRequest, dtos.NewError(http.StatusBadRequest, validationErr))
+	 } else {
+		 medicine := models.NewMedicine(requestBody.Name, requestBody.Diseases)
+		 out, err := repositories.UpdateMedicine(*medicine, ctx)
+		 if err != nil {
+			 const errMsg string = "Error updating user."
+			 log.Error(errMsg, err)
+			 c.JSON(http.StatusInternalServerError, dtos.NewError(http.StatusInternalServerError, err, errMsg))
+		 } else {
+			 c.JSON(http.StatusOK, out)
+		 }
+	 }
+ }
+
+ // @Summary      Deletes Medicines in the Database.
+ // @Description  Deletes the Medicine in the Database using their email.
+ // @Tags         accounts
+ // @Accept       json
+ // @Produce      json
+ // @Param        email     body      string  true  "User Email"
+ // @Param        name      body      string  true  "User Name"
+ // @Param        password  body      string  true  "User Password"
+ // @Success      200       {object}  models.Medicine
+ // @Failure      400       {object}  dtos.HTTPError
+ // @Failure      404       {object}  dtos.HTTPError
+ // @Failure      500       {object}  dtos.HTTPError
+ // @Router       /users/medicines/{name} [delete]
+ func DeleteMedicines(c *gin.Context) {
+	 ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
+	 defer cancel()
+ 
+	 name := c.Param("name")
+	 if name == "" {
+		 const errMsg string = "Medicine name is required."
+		 log.Error(errMsg)
+		 c.JSON(http.StatusBadRequest, dtos.NewError(http.StatusBadRequest, nil, errMsg))
+		 return
+	 }
+	  
+	 out, err := repositories.DeleteMedicine(models.Medicine{Name: name}, ctx)
+	 if err != nil {
+		 const errMsg string = "Error deleting user."
+		 log.Error(errMsg, err)
+		 c.JSON(http.StatusInternalServerError, dtos.NewError(http.StatusInternalServerError, err, errMsg))
+	 } else {
+		 c.JSON(http.StatusOK, out)
+	 }
  }
