# dhiman/mini-project/bookkeeping_service/docs/swagger.json
@@ -148,9 +148,9 @@
                 }
             }
         },
-        "/users/clients": {
+        "/users/medicines": {
             "post": {
-                "description": "Create a Client in the Database using the data sent by them (REGISTER)",
+                "description": "Create a Medicine in the Database using the data sent by them (REGISTER)",
                 "consumes": [
                     "application/json"
                 ],
@@ -160,7 +160,7 @@
                 "tags": [
                     "accounts"
                 ],
-                "summary": "Create a Client",
+                "summary": "Create a Medicine",
                 "parameters": [
                     {
                         "description": "User Email",
@@ -218,57 +218,9 @@
                 }
             }
         },
-        "/users/clients/{email}": {
-            "get": {
-                "description": "Get a Client from the Database using their email.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "accounts"
-                ],
-                "summary": "Get a Client from Database.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User Email",
-                        "name": "email",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Client"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.HTTPError"
-                        }
-                    }
-                }
-            },
+        "/users/medicines/{name}": {
             "put": {
-                "description": "Updates the Client in the Database using their email.",
+                "description": "Updates the Medicine in the Database using their email.",
                 "consumes": [
                     "application/json"
                 ],
@@ -278,7 +230,7 @@
                 "tags": [
                     "accounts"
                 ],
-                "summary": "Updates Clients in the Database.",
+                "summary": "Updates Medicines in the Database.",
                 "parameters": [
                     {
                         "description": "User Email",
@@ -312,7 +264,75 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Client"
+                            "$ref": "#/definitions/models.Medicine"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.HTTPError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Deletes the Medicine in the Database using their email.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Deletes Medicines in the Database.",
+                "parameters": [
+                    {
+                        "description": "User Email",
+                        "name": "email",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "User Name",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "User Password",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Medicine"
                         }
                     },
                     "400": {
@@ -357,40 +377,6 @@
                 "message": {
                     "type": "string",
                     "example": "status bad request"
-                }
-            }
-        },
-        "models.Client": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "description": "Email of this client",
-                    "type": "string"
-                },
-                "name": {
-                    "description": "Name of this client",
-                    "type": "string"
-                },
-                "subscriptions": {
-                    "description": "Subscriptions that this client has",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.ClientSubscription"
-                    }
-                }
-            }
-        },
-        "models.ClientSubscription": {
-            "type": "object",
-            "properties": {
-                "next_dose": {
-                    "type": "string"
-                },
-                "rate": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
                 }
             }
         },
