# dhiman/mini-project/users_service/routes/users_service_routes.go
@@ -5,11 +5,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-const baseURL string = "/users";
+const BaseURL string = "/users";
 
 func GenerateUsersServiceRoutes(router *gin.Engine) {
-	userRouter := router.Group(baseURL)
+	userRouter := router.Group(BaseURL)
+	// Create
 	userRouter.POST("clients", controllers.CreateClient)
+	// Read
 	userRouter.GET("clients/:email", controllers.GetClient)
+	// Update
 	userRouter.PUT("clients/:email", controllers.UpdateClients)
+	// Delete
+	userRouter.DELETE("clients/:email", controllers.DeleteClients)
 }
